--- a/libSwiftCal/Assets/en.lproj/Localizable.strings
+++ b/libSwiftCal/Assets/en.lproj/Localizable.strings
@@ -7,3 +7,6 @@
 */
 
 "PreliminarySuccess" = "Preliminary success";
+"Successful" = "Success";
+"ClientError" = "Client error";
+"SchedulingError" = "Scheduling error";
